[package]
name = "rainbow_engine_2"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
specs = "*"
rand = "*"
rayon = "*"

[dependencies.sdl2]
version = "*"
default-features = false
features = ["image"]
